# inspirer-rs

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md  mix-manifest.json  package-lock.json  package.json  site-setting.toml  webpack.mix.js
inspirer-actix/: Cargo.toml
inspirer-actix/src/: error.rs  lib.rs  macros.rs  response.rs
inspirer-actix/src/middleware/: auth.rs
inspirer-application/: Cargo.toml
inspirer-application/src/: app.rs  auth.rs  controller.rs  handler.rs  lib.rs  routes.rs
inspirer-application/src/controller/: credential.rs
inspirer-application/src/controller/admin/: session.rs
inspirer-application/src/handler/: admin.rs  auth.rs
inspirer-application/src/handler/admin/: contents.rs
inspirer-application/src/middleware/: auth.rs
inspirer-blog/: Cargo.toml  schemas.sql
inspirer-blog/src/: config.rs  constant.rs  controller.rs  dao.rs  error.rs  main.rs  model.rs  request.rs  server.rs  service.rs
inspirer-blog/src/context/: session.rs
inspirer-blog/src/controller/: admin.rs  auth.rs  index.rs
inspirer-blog/src/dao/: content.rs  user.rs
inspirer-blog/src/dao/_sql_files/content/: bind_content_to_content_entity.sql  create_content.sql  create_new_content_entity.sql  delete_content.sql  find_contennt_basic.sql  get_content_basic_list.sql  get_content_latest_draft_basic.sql  update_content_from_entity.sql  update_content_meta.sql
inspirer-blog/src/dao/_sql_files/user/: get_user_basic_by_id.sql  get_user_basic_by_username.sql
inspirer-blog/src/model/: content.rs  user.rs
inspirer-blog/src/request/: auth.rs  content.rs
inspirer-blog/src/service/: auth.rs  content.rs  user.rs
inspirer-common/: Cargo.toml
inspirer-common/src/: digest.rs  lib.rs  macros.rs  result.rs
inspirer-content/: Cargo.toml  schemas.sql
inspirer-content-common/: Cargo.toml
inspirer-content-common/src/: dao.rs  lib.rs
inspirer-content-common/src/dao/: content.rs
inspirer-content-common/src/dao/_sql_files/content/: bind_content_entity_to_content.sql  create_content_entity.sql  delete_content_entities_by_content_id.sql  force_delete_content.sql  get_content_basic_list.sql  get_content_for_client.sql  get_content_for_client_basic_list.sql  get_creator_latest_draft_basic.sql
inspirer-content-common/src/dao/_sql_files/user/: get_user_basic_by_id.sql
inspirer-content-common/src/model/: content.rs  user.rs
inspirer-content/src/: dao.rs  error.rs  lib.rs  manager.rs  model.rs  service.rs  util.rs
inspirer-content/src/_sql_files/: create_content_entity.sql
inspirer-content/src/dao/: content.rs  mod.rs  user.rs
inspirer-content/src/dao/_sql_files/content/: create_content.sql  delete_content.sql  delete_content_entity_by_content_id.sql  force_delete_content.sql  get_content_list_with_entity_summary.sql  get_content_with_entity.sql  get_latest_entity_by_content_id.sql  get_latest_entity_meta_by_content_id.sql  update_entity.sql  update_entity_meta.sql
inspirer-content/src/entity/: content_entities.rs  content_update_logs.rs  contents.rs  mod.rs  prelude.rs  users.rs
inspirer-content/src/enumerate/: mod.rs
inspirer-content/src/model/: content.rs  mod.rs  paginate.rs  user.rs
inspirer-content/src/service/: content.rs  user.rs
inspirer-content/src/util/: hash.rs  mod.rs  signature.rs  uuid.rs
inspirer-data-provider/: .postgres.conn  Cargo.toml
inspirer-data-provider/migrations/postgres/2019-06-25-064155_inspirer_initialize/: down.sql  up.sql
inspirer-data-provider/src/: agent.rs  db.rs  lib.rs  model.rs  result.rs  schema.rs  utils.rs
inspirer-data-provider/src/agent/: content.rs  user.rs  validate_code.rs
inspirer-data-provider/src/model/: content.rs  content_entity.rs  user.rs  user_base_profiles.rs  user_email_credentials.rs  user_mobile_phone_credentials.rs  validate_code.rs
inspirer-data-provider/src/tests/: helper.rs  test_data_build.sql  test_data_clear.sql
inspirer-user-center/: Cargo.toml
migrations/: 20220523030655_initialize.down.sql  20220523030655_initialize.up.sql  20220609145800_create_user_tables.down.sql  20220609145800_create_user_tables.up.sql  20220613031303_add_password_field.down.sql  20220613031303_add_password_field.up.sql  20220620150438_create_update_logs_table.down.sql  20220620150438_create_update_logs_table.up.sql  20220708171255_add_soft_delete_mark_field_for_contents.down.sql  20220708171255_add_soft_delete_mark_field_for_contents.up.sql
migrations/2018-06-26-065027_create_category_table/: up.sql
migrations/2018-06-26-070146_create_article_table/: up.sql
migrations/2018-06-26-090532_version_1_0_migration/: down.sql  up.sql
migrations/2018-08-29-084801_version_1_1_migration/: down.sql  up.sql
migrations/2018-09-08-184123_version_1_2_migration/: down.sql  up.sql
migrations/2019-01-13-153845_initialize_migration/: down.sql  up.sql
res/assets/: _variables.scss  app.scss  content.js  content.scss  highlight.pack.js  home.scss  layout.scss  list.scss
res/public/: mix-manifest.json
res/templates/: base.html  content.html  error.html  home.html  list.html  macros.html  page.html  push-messages.html
src/: _main.rs  cli.rs  database.rs  error.rs  lib.rs  main.rs  manager.rs  message.rs  route.rs  schema.rs  server.rs  session.rs  state.rs
src/cli/: mod.rs
src/cli/manage/: mod.rs  user.rs
src/controller/: auth.rs  content.rs  mod.rs
src/controllers/: blog.rs  index.rs  mod.rs
src/controllers/admin/: authorization.rs  (+4 more)
src/error/: database.rs  mod.rs
src/middleware/: auth.rs  mod.rs
src/middlewares/: authenticate.rs
src/models/: category.rs  content.rs  mod.rs  push_message.rs  recommend.rs  site_setting.rs  subject.rs  user.rs
src/request/: auth.rs  content.rs  mod.rs
src/response/: auth.rs  content.rs  mod.rs
src/routes/: admin.rs  blog.rs
src/util/: auth.rs  error.rs  helper.rs  message.rs  mod.rs
src/utils/: helper.rs
support/inspirer-brick/: Cargo.toml
support/inspirer-helper/: Cargo.toml
support/query-ext/: Cargo.toml
support/query-ext/src/: dao.rs  filter.rs  lib.rs  model.rs  sort.rs  statement.rs
support/query-ext/src/statement/: mysql.rs
(+13 files in other folders)
