[package]
name = "inspirer-rs"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "inspirer-content",
]

[dependencies]
anyhow = "1.0.57"
axum = "0.5.6"
axum-macros = "0.2.2"
chrono = { version = "0.4.19", features = ["serde"] }
clap = { version = "3.1.18", features = ["derive"] }
dotenv = "0.15.0"
inspirer-content = { path = "inspirer-content" }
serde = { version = "1.0.137", features = ["derive"] }
thiserror = "1.0.31"
tokio = { version = "1.18.2", features = ["rt", "macros", "rt-multi-thread", "signal"] }
tracing = "0.1.34"
tracing-subscriber = { version = "0.3.11", features = ["env-filter"] }

[target.'cfg(unix)'.dependencies]
daemonize-me = "2.0"