[package]
name = "inspirer-rs"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "inspirer-content",
]

[dependencies]
anyhow = "1.0.57"
async-trait = "0.1.56"
axum = "0.5.7"
axum-macros = "0.2.2"
chrono = { version = "0.4.19", features = ["serde"] }
clap = { version = "3.1.18", features = ["derive"] }
dotenv = "0.15.0"
http = "0.2.8"
inspirer-content = { path = "inspirer-content" }
jsonwebtoken = "8.1.0"
lazy_static = "1.4.0"
serde = { version = "1.0.137", features = ["derive"] }
thiserror = "1.0.31"
tokio = { version = "1.18.2", features = ["rt", "macros", "rt-multi-thread", "signal"] }
tracing = "0.1.34"
tracing-subscriber = { version = "0.3.11", features = ["env-filter"] }

[target.'cfg(unix)'.dependencies]
daemonize-me = "2.0"
