[package]
name = "inspirer-rs"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "inspirer-content",
]

[dependencies]
anyhow = "1.0.58"
async-trait = "0.1.56"
axum = "0.5.12"
axum-macros = "0.2.3"
chrono = { version = "0.4.19", features = ["serde"] }
clap = { version = "3.2.10", features = ["derive"] }
dotenv = "0.15.0"
http = "0.2.8"
inspirer-content = { path = "inspirer-content" }
jsonwebtoken = "8.1.1"
lazy_static = "1.4.0"
serde = { version = "1.0.139", features = ["derive"] }
thiserror = "1.0.31"
tokio = { version = "1.20.4", features = ["rt", "macros", "rt-multi-thread", "signal"] }
tracing = "0.1.35"
tracing-subscriber = { version = "0.3.14", features = ["env-filter"] }

[target.'cfg(unix)'.dependencies]
daemonize-me = "2.0.1"
