[package]
name = "inspirer-actix"
version = "0.1.0"
authors = ["chongyi <xpz3847878@163.com>"]
edition = "2018"

[dependencies]
failure = "0.1.5"
failure_derive = "0.1.5"
http = "0.2"
actix-web = "2.0"
actix-http = "^1.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
log = "0.4.6"
derive_more = "0.15.0"