[package]
name = "inspirer-application"
version = "0.1.0"
authors = ["chongyi <xpz3847878@163.com>"]
edition = "2018"

[[bin]]
name = "inspirer-server"
path = "bin/inspirer_server.rs"

[dependencies]
inspirer-common = { path = "../inspirer-common" }
inspirer-data-provider = { path = "../inspirer-data-provider" }
actix-web = "1.0"
actix-identity = "*"
actix-rt = "*"
clap = "2.33.0"
daemonize = "0.4.1"
serde = "1.0"
serde_derive = "1.0"
toml = "0.5.1"
futures = "0.1"
num_cpus = "1.10.1"