[package]
name = "inspirer-application"
version = "0.1.0"
authors = ["chongyi <xpz3847878@163.com>"]
edition = "2018"

[[bin]]
name = "inspirer-server"
path = "bin/inspirer_server.rs"

[dependencies]
inspirer-data-provider = { path = "../inspirer-data-provider" }
inspirer-actix = { path = "../inspirer-actix" }
actix-web = "2.0"
actix-service = "^1.0.1"
actix-rt = "^1.0.0"
actix-identity = "*"
clap = "2.33.0"
serde = "1.0"
serde_derive = "1.0"
toml = "0.5.1"
futures = "^0.3.1"
num_cpus = "1.10.1"
regex = "1"

[target.'cfg(unix)'.dependencies]
daemonize = "0.4.1"