[package]
name = "inspirer-content-common"
version = "0.1.0"
edition = "2018"

[dependencies]
sqlx = { version = "0.4.2", features = ["mysql", "chrono"] }
inspirer-actix-ext = { git = "https://gitee.com/chongyi/inspirer-actix-ext-support.git", features = ["database", "redis", "validator"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
strum = { version = "0.21", features = ["derive"] }

[features]
default = ["runtime-actix-rustls"]
runtime-actix-rustls = ["sqlx/runtime-actix-rustls", "inspirer-actix-ext/runtime-actix-rustls"]
runtime-tokio-rustls = ["sqlx/runtime-tokio-rustls", "inspirer-actix-ext/runtime-tokio-rustls"]
runtime-actix-native-tls = ["sqlx/runtime-actix-native-tls", "inspirer-actix-ext/runtime-actix-native-tls"]
runtime-tokio-native-tls = ["sqlx/runtime-tokio-native-tls", "inspirer-actix-ext/runtime-tokio-native-tls"]