[package]
name = "inspirer-content"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.53"
bs62 = "0.1.4"
chrono = { version = "0.4.19", features = ["serde"] }
derive_builder = "0.11.2"
lazy_static = "1.4.0"
mac_address = "1.1.3"
regex = "1.5.6"
sea-orm = { version = "0.8.0", features = ["sqlx-mysql", "runtime-tokio-rustls", "macros", "sqlx-dep"] }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
thiserror = "1.0.31"
tracing = "0.1.34"
uuid = { version = "0.8", features = ["v1", "v4", "serde"] }
