[package]
name = "inspirer-data-provider"
version = "0.1.0"
authors = ["chongyi <xpz3847878@163.com>"]
edition = "2018"

[dependencies]
diesel = { version = "^1.4.0", features = ["postgres", "mysql", "chrono", "r2d2"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
uuid = { version = "0.7.4", features = ["v4"] }
pwhash = "0.3"
log = "0.4.6"
chrono = { version = "0.4", features = ["serde"] }
inspirer-actix = { path = "../inspirer-actix" }
inspirer-common = { path = "../inspirer-common" }
rand = "0.6.5"
time = "0.1"
http = "0.2"